infrastructure/configs/gateway/flux-web-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-web-httproute
  namespace: flux-system
spec:
  parentRefs:
  - name: app-gateway
    namespace: istio-system
  hostnames:
  - "flux-web.traipoap.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: flux-web
      port: 9080
