infrastructure/configs/gateway/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-httproute
  namespace: istio-system
spec:
  parentRefs:
  - name: app-gateway
    namespace: istio-system
  hostnames:
  - "grafana.traipoap.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: grafana
      port: 3000
