infrastructure/configs/gateway/kiali-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali-httproute
  namespace: istio-system
spec:
  parentRefs:
  - name: app-gateway
    namespace: istio-system
  hostnames:
  - "kiali.traipoap.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kiali
      port: 20001
