infrastructure/configs/gateway/quickwit-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: quickwit-httproute
  namespace: logging
spec:
  parentRefs:
  - name: app-gateway
    namespace: istio-system
  hostnames:
  - "quickwit.traipoap.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: quickwit-searcher
      port: 7280
